--- a/BakerySales/Views/Orders/New.cshtml
+++ b/BakerySales/Views/Orders/New.cshtml
@@ -6,13 +6,13 @@
 
 <form action="/vendors/@Model.Id/orders" method="post">
   <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
-  <label for ="orderTitle">Order Title</label>
-  <input id="orderTitle" name="orderTitle" type="text">
-  <label for="orderDescription">Order Description</label>
-  <input id="orderDescription" name="orderDescription" type="text">
-  <label for="orderPrice">Order Price</label>
-  <input id="orderPrice" name="orderPrice" type="int">
-  <label for="orderDate" >Order Date</label>
-  <input id="orderDate" name="orderDate" type="date">
+  <label for ="title">Order Title</label>
+  <input id="title" name="title" type="text">
+  <label for="description">Order Description</label>
+  <input id="description" name="description" type="text">
+  <label for="price">Order Price</label>
+  <input id="price" name="price" type="int">
+  <label for="date" >Order Date</label>
+  <input id="date" name="date" type="date">
   <button type='submit'>Add Order</button>
 </form>
