--- a/BakerySales/Views/Orders/Show.cshtml
+++ b/BakerySales/Views/Orders/Show.cshtml
@@ -2,21 +2,15 @@
   Layout = "_Layout";
  }
 
-  <div class="row">
-    <div class="col-md-12">
-    <h2>Order Details</h2>
-    <table class="table">
-      <tr>
-      <th>Order ID</th>
-      <th>Order Date</th>
-      <th>Order Total</th>
-      <th>Order Status</th>
-      </tr>
-      <tr>
-      <td>@Model.OrderId</td>
-      <td>@Model.OrderDate</td>
-      <td>@Model.OrderTotal</td>
-      <td>@Model.OrderStatus</td>
-      </tr>
-    </table>
-    </div>
+
+<h1>Order Details: </h1>
+
+<h2>Title: @Model["order"].Title</h2>
+<h2>Description: @Model["order"].Description</h2>
+<h2>Price: @Model["order"].Price</h2>
+<h2>Date: @Model["order"].Date</h2>
+<h3>Vendor: @Model["vendor"].Name</h3>
+
+<a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
+<a href='/vendors'>View all vendors</a>
+  
